--- a/XamlBrewer.UWP.IEXCloud.Sample/Views/HistoryPage.xaml
+++ b/XamlBrewer.UWP.IEXCloud.Sample/Views/HistoryPage.xaml
@@ -49,7 +49,7 @@
                 <telerikChart:LinearAxis />
             </telerikChart:RadCartesianChart.VerticalAxis>
             <telerikChart:LineSeries x:Name="HistoricPrices"
-                                     LegendTitle="MSFT 1 Month"
+                                     LegendTitle="1 Month"
                                      IsVisibleInLegend="True"
                                      Stroke="SlateGray">
                 <telerikChart:LineSeries.CategoryBinding>
@@ -62,8 +62,7 @@
                     <DataTemplate />
                 </telerikChart:ChartTrackBallBehavior.TrackInfoTemplate>
             </telerikChart:LineSeries>
-            <telerikChart:CandlestickSeries x:Name="CandleSticks"
-                                            DisplayName="Bananas">
+            <telerikChart:CandlestickSeries x:Name="CandleSticks">
                 <telerikChart:CandlestickSeries.DefaultVisualStyle>
                     <Style TargetType="telerikChart:Candlestick">
                         <Setter Property="StrokeThickness"
