--- a/XamlBrewer.UWP.IEXCloud.Sample/App.xaml
+++ b/XamlBrewer.UWP.IEXCloud.Sample/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application
-    x:Class="XamlBrewer.UWP.IEXCloud.Sample.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:XamlBrewer.UWP.IEXCloud.Sample"
-    RequestedTheme="Light">
+﻿<Application x:Class="XamlBrewer.UWP.IEXCloud.Sample.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:XamlBrewer.UWP.IEXCloud.Sample"
+             RequestedTheme="Light">
 
     <Application.Resources>
         <ResourceDictionary>
@@ -15,6 +14,8 @@
             <Color x:Key="SystemAccentColor">RosyBrown</Color>
             <SolidColorBrush x:Key="SystemAccentColorBrush"
                              Color="{StaticResource SystemAccentColor}" />
+            <SolidColorBrush x:Key="TabViewItemHeaderBackgroundSelected"
+                             Color="GhostWhite" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
