History page: sync menu to tab

--- a/XamlBrewer.UWP.IEXCloud.Sample/Views/HistoryPage.xaml
+++ b/XamlBrewer.UWP.IEXCloud.Sample/Views/HistoryPage.xaml
@@ -139,7 +139,8 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <winui:TabView Background="Transparent">
+        <winui:TabView x:Name="SymbolsTab"
+                       Background="Transparent">
             <winui:TabViewItem Header="AAPL" />
             <winui:TabViewItem Header="MSFT" />
         </winui:TabView>
