History page: functional TabView

--- a/XamlBrewer.UWP.IEXCloud.Sample/Views/HistoryPage.xaml
+++ b/XamlBrewer.UWP.IEXCloud.Sample/Views/HistoryPage.xaml
@@ -140,6 +140,8 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
         <winui:TabView x:Name="SymbolsTab"
+                       SelectionChanged="SymbolsTab_SelectionChanged"
+                       AddTabButtonClick="SymbolsTab_AddTabButtonClick" 
                        Background="Transparent">
             <winui:TabViewItem Header="AAPL" />
             <winui:TabViewItem Header="MSFT" />
