--- a/XamlBrewer.UWP.IEXCloud.Sample/Views/WatchListPage.xaml
+++ b/XamlBrewer.UWP.IEXCloud.Sample/Views/WatchListPage.xaml
@@ -6,7 +6,7 @@
       xmlns:winui="using:Microsoft.UI.Xaml.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:response="using:VSLee.IEXSharp.Model.Shared.Response"
+      xmlns:response="using:IEXSharp.Model.Shared.Response"
       xmlns:sys="using:System"
       mc:Ignorable="d"
       Background="Transparent">
